Remove overflow x hidden for sidebar to fix rendering issue for Safari

--- a/css/resume.css
+++ b/css/resume.css
@@ -30,7 +30,6 @@ h2 {
     top: 0;
     left: 0;
     background-color: #565656;
-    overflow-x: hidden;
     padding-top: 20px;
     color: #C09F80;
     padding-left: 10px;
